<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactListApp1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_contact">Add New Contact :</string>
    <string name="name_entry">Enter Name :</string>
    <string name="email_entry">Enter Email :</string>
    <string name="phone_entry">Enter Phone No. :</string>
    <string name="address_entry">Enter Address :</string>
    <string name="save">Save</string>
    <string name="manage">Manage Contact</string>
    <string name="drop_db">Drop Database</string>
    <string name="exit">Exit</string>
    <string name="title_activity_manage_contacts">ManageContacts</string>
    <string name="select_contact">Select Contact :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>

</resources>